src/objects/Lookup__c.object
<CustomObject>
    <fields>
        <fullName>Enhanced_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enhanced Lookup</label>
        <referenceTo>Enhanced_Lookup__c</referenceTo>
        <relationshipLabel>Lookup</relationshipLabel>
        <relationshipName>Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>